examples/v1.0.0/commons/format/ts/invalid/format.receipt.invalid.2.ts
// INVALID format.receipt #2 — missing result when status=success

export const formatReceiptInvalid2: any = {
  x402: {
    verb: "format",
    version: "1.0.0",
    request_id: "req-format-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-format-0005"
  },
  status: "success"
};
